public/css/app.css
* {
  box-sizing: border-box;
}

html,
body {
  margin: 0;
  padding: 0;
  width: 100vw;
  color: rgba(254, 254, 254, 1);
  font-family: 'Fira Sans', helvetica, arial, sans-serif;
  font-weight: 400;
  box-sizing: border-box;
  font-size: 100%;
  line-height: 1.5;
  -webkit-overflow-scrolling: touch;

  --roundedCorners: 2px;
  --gap: 20px;
  --columnSpacing: 60px;
  --grey90: #0c0c0d;
  --grey90a1: rgba(12, 12, 13, 0.1);
  --grey90a3: rgba(12, 12, 13, 0.3);
  --grey90a4: rgba(12, 12, 13, 0.4);
  --grey90a5: rgba(12, 12, 13, 0.5);
  --grey90a6: rgba(12, 12, 13, 0.6);
  --blue40: #45a1ff;
  --blue50: #0a84ff;
  --blue60: #0060df;
  --blue70: #003eaa;
  --blue80: #002275;
  --red50: #ff0039;
  --red60: #d70022;
  --red70: #a4000f;
  --green60: #12bc00;
  --green70: #058b00;
}

body {
  position: relative;
  background: #07081e;
  background-image:
    url("/img/wave-header.svg"),
    linear-gradient(
      177deg,
      #002275,
      #23113d 95.11%
    );
  background-repeat: no-repeat;
  background-position: 0 -5%, center center;
  background-attachment: scroll, fixed;
  background-size: contain, cover;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  font-size: 17px;
  overflow-y: scroll;
  overflow-x: hidden;
  min-height: 100vh;
  height: 100%;
  width: 100%;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.section-headline {
  line-height: 1.3;
  font-size: 1.9375rem;
  display: block;
  margin-bottom: calc(var(--gap) / 2);
}

.section-sub-head {
  font-size: 17px;
  font-weight: 500;
}

h1,
.section-headline {
  letter-spacing: -0.77px;
}

.secondary-title {
  margin-bottom: 10px;
  font-size: 20px;
}

h1 {
  white-space: nowrap;
}

div,
form,
h1,
h2,
h3,
h4,
h5,
h6,
li,
ol,
p,
ul {
  margin: 0;
  padding: 0;
}

ul {
  list-style-type: none;
}

a {
  line-height: inherit;
  color: rgba(255, 255, 255, 1);
  text-decoration: none;
  cursor: pointer;
  opacity: 1;
  transition: opacity 0.15s cubic-bezier(0.07, 0.95, 0, 1);
}

a:hover {
  opacity: 0.8;
  transition: opacity 0.15s cubic-bezier(0.07, 0.95, 0, 1);
}

a img {
  border: 0;
}

img {
  user-select: none;
  -webkit-user-select: none;
  display: inline-block;
  vertical-align: middle;
  -ms-interpolation-mode: bicubic;
}

.nowrap {
  white-space: nowrap;
}

/* Disable pointer events on elements nested inside analytics triggering links */

ul.social-media-sharing-buttons span,
footer img {
  pointer-events: none;
}

/* Flexbox Content Wrappers */

.section-wrapper {
  display: flex;
  flex-wrap: wrap;
  padding: var(--columnSpacing);
  width: 100%;
  max-width: 1050px;
  margin: auto;
  overflow: hidden;
}

.wrap-row {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
}

.whole {
  margin: auto;
  flex: 0 0 calc(100% - var(--columnSpacing));
}

.fourth {
  flex: 1 1 calc(25% - var(--columnSpacing));
}

.three-fourths {
  flex: 1 1 calc(75% - var(--columnSpacing));
}

.third {
  flex: 1 1 calc(33.3% - var(--columnSpacing));
  min-width: 200px;
  max-width: 300px;
}

.two-thirds {
  flex: 1 1 calc(66.7% - var(--columnSpacing));
  display: flex;
}

.half {
  flex: 1 1 calc(50% - var(--columnSpacing));
  min-width: 300px;
  max-width: 500px;
}

.fourth,
.third,
.two-thirds,
.half {
  margin: calc(var(--columnSpacing) / 2);
}

.whole,
.half,
.third,
.two-thirds,
.fourth {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.banner {
  background-color: rgba(0, 0, 0, 0.2);
}

.drop-shadow {
  background-color: rgba(255, 255, 255, 0.01);
  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
}

.hide {
  display: none !important;
}

.sub-page-content,
.error-page-content {
  justify-content: center;
  align-items: center;
  display: flex;
  flex-direction: column;
  min-height: 75vh;
  margin-top: 0;
}

.error-page-content {
  margin-top: -10vh;
  justify-content: center;
  align-items: flex-start;
}

.error-page-content.section-wrapper .half {
  flex-direction: column !important;
  justify-content: center;
  display: block;
  flex: none;
  margin-bottom: 20vh;
}

.sub-page-content .section-wrapper:last-of-type {
  margin: 0 0 var(--columnSpacing) 0;
}

.centered-content {
  text-align: center;
  justify-content: center !important;
  align-items: center;
  align-content: center;
  max-width: 700px;
  padding-bottom: calc(var(--columnSpacing) * 2.5);
}

.centered-content > * {
  justify-content: center !important;
  text-align: center !important;
  margin-right: auto !important;
  margin-left: auto !important;
  margin-bottom: var(--gap) !important;
}

/* FORMS */

form,
.form-group {
  width: 100%;
}

input[type="submit"],
input[type="email"],
input[type="password"],
input[type="text"] {
  height: 45px;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  white-space: nowrap;
  font-family: inherit;
  border-radius: var(--roundedCorners);
}

input[type="submit"] {
  color: rgba(255, 255, 255, 1);
  font-weight: 500;
  font-size: 18px;
  line-height: 40px;
  border: 1px solid rgba(255, 255, 255, 0);
  cursor: pointer;
}

input[type="email"],
input[type="password"],
input[type="text"] {
  border: 1px solid var(--grey90a3);
  background-color: #fefefe;
  font-size: 15px;
  color: var(--grey90);
  overflow: visible;
  text-indent: 8px;
}

input:focus,
button:focus,
.button:focus,
.radio-button-group:focus {
  border: 1px solid var(--blue50);
  box-shadow: 0 0 0 1px #0a84ff, 0 0 0 4px rgba(10, 132, 255, 0.3);
  outline: none;
}

input[type="email"]:hover,
input[type="password"]:hover,
input[type="text"]:hover {
  border: 1px solid var(--grey90a4);
}

.input-group {
  display: flex;
  width: 100%;
  flex-direction: column;
  justify-content: flex-start;
  position: relative;
}

.input-group-button {
  margin-top: calc(var(--gap) / 2);
  position: relative;
}

input:-webkit-autofill {
  -webkit-box-shadow: inset 0 0 0 9999px #fff;
}
/* ... */

